# ethrex

./: .dockerignore  .gitattributes  .gitignore  .tool-versions  CHANGELOG.md  CLI.html  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  book.toml  docker-compose.yaml  index.html  install.sh  print.html  roadmap.html  searchindex.js  toc.html  toc.js
benches/: Cargo.toml
benches/benches/: build_block_benchmark.rs
cmd/ef_tests/blockchain/: .fixtures_url  Cargo.toml  Makefile  README.md  deserialize.rs  lib.rs  network.rs  test_runner.rs  types.rs
cmd/ef_tests/state/: Cargo.toml  Makefile  README.md  deserialize.rs  lib.rs  parser.rs  report.rs  types.rs  utils.rs
cmd/ef_tests/state_v2/: .gitignore  Cargo.toml  Makefile  README.md
cmd/ethrex/: Cargo.toml  build.rs  build_l2.rs  cli.rs  decode.rs  ethrex.rs  initializers.rs  l2.rs  lib.rs  networks.rs  utils.rs
cmd/ethrex/bench/: build_block_benchmark.rs  import_blocks_benchmark.rs
cmd/ethrex/l2/: command.rs  deployer.rs  initializers.rs  mod.rs  options.rs
cmd/ethrex/subcommands/: import.rs  mod.rs  removedb.rs
cmd/ethrex_replay/: .gitignore  Cargo.toml  Makefile  README.md
cmd/ethrex_replay/src/: bench.rs  block_run_report.rs  cache.rs  cli.rs  constants.rs  fetcher.rs  helpers.rs  lib.rs  main.rs  plot_composition.rs  report.rs  run.rs  slack.rs
cmd/load_test/: Cargo.toml  README.md
cmd/load_test/src/: main.rs
crates/blockchain/: Cargo.toml  blockchain.rs  constants.rs  error.rs  fork_choice.rs  mempool.rs  payload.rs  smoke_test.rs  tracing.rs  vm.rs
crates/blockchain/dev/: Cargo.toml  Dockerfile  block_producer.rs  docker-compose-dev.yaml
crates/blockchain/metrics/: Cargo.toml  README.md  api.rs  docker-compose-metrics-alerts.overrides.yaml  docker-compose-metrics-l2.overrides.yaml  docker-compose-metrics.yaml  metrics_blocks.rs  metrics_l2.rs  metrics_process.rs  metrics_transactions.rs  mod.rs  profiling.rs
crates/common/: Cargo.toml  base64.rs  common.rs  constants.rs  core.rs  evm.rs  fd_limit.rs  genesis_utils.rs  kzg.rs  rkyv_utils.rs  serde_utils.rs  tracing.rs  utils.rs
crates/common/config/: Cargo.toml  networks.rs
crates/common/crypto/: Cargo.toml  kzg.rs  lib.rs
crates/common/rlp/: Cargo.toml  decode.rs  encode.rs  error.rs  structs.rs
crates/common/trie/: Cargo.toml  Makefile  README.md  db.rs  error.rs  logger.rs  nibbles.rs  node.rs  node_hash.rs  rlp.rs  state.rs  test_utils.rs  trie.rs  trie_iter.rs  trie_sorted.rs  verify_range.rs
crates/common/types/: account.rs  account_update.rs  batch.rs  blobs_bundle.rs  block.rs  block_execution_witness.rs  constants.rs  fork_id.rs  genesis.rs  l2.rs  mod.rs  payload.rs  receipt.rs  requests.rs  transaction.rs  tx_fields.rs
crates/l2/: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  build.rs  config_example.toml  docker-compose-l2-store.overrides.yaml  docker-compose-l2-tdx.yaml  docker-compose-l2-web3signer.yaml  docker-compose-l2.yaml  docker-compose.yaml  errors.rs  l2.rs  parse_toml.rs
crates/l2/based/: README.md  block_fetcher.rs  mod.rs  sequencer_state.rs  state_updater.rs
crates/l2/common/: Cargo.toml
crates/l2/configs/: config_example.toml  prover_client_config_example.toml  sequencer_config_docker_example.toml  sequencer_config_docker_sp1_example.toml  sequencer_config_example.toml
crates/l2/contracts/: Cargo.toml  Dockerfile  README.md  build.rs  deployer.rs  system_contracts_updater.rs  utils.rs
crates/l2/docs/: README.md  contracts.md  ethrex_aligned_mode.md  overview.md  proposer.md  prover.md  sequencer.md  state_diffs.md  withdrawals.md
crates/l2/monitor/: app.rs  mod.rs  utils.rs
crates/l2/proposer/: errors.rs  execution_cache.rs  l1_committer.rs  l1_watcher.rs  metrics.rs  mod.rs  prover_server.rs  state_diff.rs
crates/l2/prover/: Cargo.toml  Makefile
crates/l2/sdk/: Cargo.toml  build.rs
crates/l2/sequencer/: admin_server.rs  blobs_bundle_cache.rs  block_producer.rs  configs.rs  errors.rs  execution_cache.rs  l1_committer.rs  l1_proof_sender.rs  l1_proof_verifier.rs  l1_watcher.rs  metrics.rs  mod.rs  proof_coordinator.rs  prover_server.rs  setup.rs  state_diff.rs  utils.rs
crates/l2/storage/: Cargo.toml
crates/l2/tee/: .gitignore  DOCS.md  mkosi.build.chroot  mkosi.conf  mkosi.prepare.chroot  mkosi.tools.conf  quote.example
crates/l2/tests/: state_reconstruct.rs  tests.rs
crates/l2/utils/: error.rs  helpers.rs  mod.rs  parse.rs  state_reconstruct.rs  test_data_io.rs
crates/networking/p2p/: Cargo.toml  bootnode.rs  discv4.rs  kademlia.rs  metrics.rs  net.rs  network.rs  p2p.rs  peer_channels.rs  peer_handler.rs  peer_score.rs  rlpx.rs  snap.rs  sync.rs  sync_manager.rs  tx_broadcaster.rs  types.rs  utils.rs
crates/storage/: Cargo.toml  account_update.rs  api.rs  error.rs  lib.rs  rlp.rs  store.rs  utils.rs
crates/storage/store/: Cargo.toml  api.rs  error.rs  rlp.rs  storage.rs  store.rs  utils.rs
crates/storage/store_db/: in_memory.rs  libmdbx.rs  mod.rs  redb.rs  rocksdb.rs
crates/storage/trie/: Cargo.toml  db.rs  error.rs  state.rs  test_utils.rs  trie.rs
crates/storage/trie_db/: layering.rs  libmdbx.rs  libmdbx_dupsort.rs  libmdbx_dupsort_locked.rs  libmdbx_locked.rs  mod.rs  redb.rs  redb_multitable.rs  rocksdb.rs  rocksdb_locked.rs  test_utils.rs  utils.rs
crates/vm/: Cargo.toml  constants.rs  db.rs  errors.rs  execution_db.rs  execution_result.rs  helpers.rs  lib.rs  mods.rs  prover_db.rs  system_contracts.rs  tracing.rs  vm.rs  witness_db.rs
crates/vm/backends/: constants.rs  levm.rs  mod.rs  revm.rs  revm_b.rs
crates/vm/levm/: .gitignore  Cargo.toml  Makefile  README.md  results_tests
tooling/archive_sync/: Cargo.toml  README.md
tooling/archive_sync/src/: main.rs
tooling/genesis/: Cargo.toml
tooling/genesis/src/: genesis.rs
tooling/load_test/: Cargo.toml  README.md
tooling/load_test/src/: main.rs
tooling/loc/: Cargo.toml
tooling/loc/src/: main.rs  report.rs
tooling/reorgs/: Cargo.toml  README.md
tooling/reorgs/src/: main.rs  simulator.rs
tooling/replayer/: Cargo.toml
tooling/replayer/src/: main.rs
(+874 files in other folders)
