[workspace]
members = [
  "cmd/ef_tests/blockchain",
  "cmd/ef_tests/state",
  "cmd/ethrex",
  "cmd/ethrex_l2",
  "cmd/hive_report",
  "cmd/loc",
  "crates/blockchain",
  "crates/blockchain/dev",
  "crates/common",
  "crates/common/rlp",
  "crates/common/trie",
  "crates/l2/",
  "crates/l2/contracts",
  "crates/l2/prover",
  "crates/l2/sdk",
  "crates/networking/p2p",
  "crates/networking/rpc",
  "crates/storage",
  "crates/vm",
  "crates/vm/levm",
  "crates/vm/levm/bench/revm_comparison",
]
resolver = "2"

default-members = ["cmd/ethrex"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.release-with-debug]
inherits = "release"
debug = 2

[workspace.dependencies]
ethrex-blockchain = { path = "./crates/blockchain" }
ethrex-common = { path = "./crates/common" }
ethrex-p2p = { path = "./crates/networking/p2p" }
ethrex-rpc = { path = "./crates/networking/rpc" }
ethrex-storage = { path = "./crates/storage" }
ethrex-vm = { path = "./crates/vm" }
ethrex-levm = { path = "./crates/vm/levm" }
ethrex-trie = { path = "./crates/common/trie" }
ethrex-rlp = { path = "./crates/common/rlp" }
ethrex-l2 = { path = "./crates/l2" }
ethrex-sdk = { path = "./crates/l2/sdk" }
ethrex-prover = { path = "./crates/l2/prover" }

tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }

ethereum-types = { version = "0.15.1", features = ["serialize"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
libmdbx = { version = "0.5.0", features = ["orm"] }
bytes = { version = "1.6.0", features = ["serde"] }
tokio = { version = "1.41.1", features = ["full"] }
thiserror = "2.0.9"
hex = "0.4.3"
hex-literal = "0.4.1"
crc32fast = "1.4.2"
lazy_static = "1.5.0"
sha2 = "0.10.8"
sha3 = "0.10.8"
tokio-util = { version = "0.7.12", features = ["rt"] }
jsonwebtoken = "9.3.0"
rand = "0.8.5"
cfg-if = "1.0.0"
reqwest = { version = "0.12.7", features = ["json"] }
redb = "2.2.0"
snap = "1.1.1"
k256 = { version = "0.13.3", features = ["ecdh"] }
secp256k1 = { version = "0.29.1", default-features = false, features = [
  "global-context",
  "recovery",
  "rand",
] }
keccak-hash = "0.11.0"
axum = "0.8.1"
