[workspace]
members = [
  "cmd/ef_tests/blockchain",
  "cmd/ef_tests/state",
  "cmd/ethrex",
  "cmd/ethrex_replay",
  "crates/blockchain",
  "crates/blockchain/dev",
  "crates/common",
  "crates/common/rlp",
  "crates/common/trie",
  "crates/l2/",
  "crates/l2/contracts",
  "crates/l2/common",
  "crates/l2/prover",
  "crates/l2/prover/zkvm/interface",
  "crates/l2/sdk",
  "crates/l2/storage",
  "crates/networking/p2p",
  "crates/networking/rpc",
  "crates/storage",
  "crates/vm",
  "crates/vm/levm",
  "crates/vm/levm/bench/revm_comparison",
  "tooling/genesis",
  "tooling/hive_report",
  "tooling/load_test",
  "tooling/loc",
]
resolver = "2"

default-members = ["cmd/ethrex"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[profile.release-with-debug]
inherits = "release"
debug = 2

[workspace.dependencies]
ethrex-blockchain = { path = "./crates/blockchain" }
ethrex-common = { path = "./crates/common" }
ethrex-p2p = { path = "./crates/networking/p2p" }
ethrex-rpc = { path = "./crates/networking/rpc" }
ethrex-storage = { path = "./crates/storage" }
ethrex-vm = { path = "./crates/vm" }
ethrex-levm = { path = "./crates/vm/levm" }
ethrex-trie = { path = "./crates/common/trie" }
ethrex-rlp = { path = "./crates/common/rlp" }
ethrex-l2 = { path = "./crates/l2" }
ethrex-l2-common = { path = "./crates/l2/common" }
ethrex-sdk = { path = "./crates/l2/sdk" }
ethrex-prover = { path = "./crates/l2/prover" }
ethrex-storage-rollup = { path = "./crates/l2/storage" }

tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }

async-trait = "0.1.88"
ethereum-types = { version = "0.15.1", features = ["serialize"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
libmdbx = { version = "=0.5.3", features = ["orm"] }
bytes = { version = "1.6.0", features = ["serde"] }
tokio = { version = "1.41.1"}
thiserror = "2.0.9"
hex = "0.4.3"
hex-literal = "0.4.1"
crc32fast = "1.4.2"
lazy_static = "1.5.0"
sha2 = "0.10.8"
sha3 = "0.10.8"
tokio-util = { version = "0.7.12", features = ["rt"] }
jsonwebtoken = "9.3.0"
rand = "0.8.5"
cfg-if = "1.0.0"
reqwest = { version = "0.12.7", features = ["json"] }
redb = "=2.4.0"
snap = "1.1.1"
k256 = { version = "0.13.3", features = ["ecdh"] }
secp256k1 = { version = "0.29.1", default-features = false, features = [
  "global-context",
  "recovery",
  "rand",
] }
keccak-hash = "0.11.0"
axum = "0.8.1"
clap = { version = "4.3", features = ["derive", "env"] }
clap_complete = "4.5.17"
eyre = "0.6.12"
libsql = "0.9.10"
futures = "0.3.31"

[patch.crates-io]
secp256k1 = { git = "https://github.com/sp1-patches/rust-secp256k1", tag = "patch-0.29.1-sp1-5.0.0" }
