[package]
name = "ethrex"
version = "0.1.0"
edition = "2024"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethrex-blockchain.workspace = true
ethrex-rpc.workspace = true
ethrex-common.workspace = true
ethrex-p2p.workspace = true
ethrex-storage.workspace = true
ethrex-vm.workspace = true
ethrex-rlp.workspace = true
ethrex-storage-rollup = { workspace = true, optional = true }
ethrex-l2 = { workspace = true, optional = true }
ethrex-l2-common = { workspace = true, optional = true }
ethrex-sdk = { workspace = true, optional = true }

bytes.workspace = true
hex.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
k256.workspace = true
clap = { workspace = true, features = ["string"] }
clap_complete.workspace = true
eyre.workspace = true
directories = "5.0.1"
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.38.0", features = ["full"] }
anyhow = "1.0.86"
rand = "0.8.5"
local-ip-address = "0.6"
tokio-util.workspace = true
redb = { workspace = true, optional = true }
lazy_static.workspace = true
secp256k1 = { workspace = true }
keccak-hash.workspace = true
reqwest.workspace = true
itertools = "0.14.0"

cfg-if = "1.0.0"

ethrex-dev = { path = "../../crates/blockchain/dev", optional = true }
ethrex-metrics = { path = "../../crates/blockchain/metrics" }

[[bin]]
name = "ethrex"
path = "./ethrex.rs"

[lib]
name = "ethrex"
path = "./lib.rs"

[features]
debug = ["ethrex-vm/debug"]
default = ["libmdbx", "c-kzg", "blst"]
dev = ["dep:ethrex-dev", "debug"]
c-kzg = [
  "ethrex-vm/c-kzg",
  "ethrex-common/c-kzg",
  "ethrex-blockchain/c-kzg",
  "ethrex-p2p/c-kzg",
]
metrics = ["ethrex-blockchain/metrics", "ethrex-l2?/metrics"]
libmdbx = ["ethrex-storage/libmdbx", "ethrex-storage-rollup?/libmdbx"]
redb = ["dep:redb", "ethrex-storage/redb"]
blst = ["ethrex-vm/blst"]
l2 = [
  "dep:ethrex-l2",
  "dep:ethrex-l2-common",
  "dep:ethrex-sdk",
  "ethrex-vm/l2",
  "ethrex-blockchain/l2",
  "ethrex-rpc/l2",
  "ethrex-storage-rollup",
]
rollup_storage_libmdbx = ["ethrex-storage-rollup/libmdbx"]
rollup_storage_redb = ["ethrex-storage-rollup/redb"]
rollup_storage_sql = ["ethrex-storage-rollup/sql"]
sync-test = []
[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_futures", "async_tokio"] }
ethrex-sdk.workspace = true
secp256k1.workspace = true
k256.workspace = true
tempdir = { version = "0.3.7" }

[[bench]]
path = "./bench/import_blocks_benchmark.rs"
name = "import_blocks_benchmark"
harness = false

[[bench]]
path = "./bench/build_block_benchmark.rs"
name = "build_block_benchmark"
harness = false

[build-dependencies]
vergen = { version = "9.0.0", features = ["rustc"] }

