[package]
name = "ethrex"
version = "0.1.0"
edition = "2024"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethrex-config.workspace = true
ethrex-blockchain.workspace = true
ethrex-rpc.workspace = true
ethrex-common.workspace = true
ethrex-p2p.workspace = true
ethrex-storage.workspace = true
ethrex-vm.workspace = true
ethrex-rlp.workspace = true
ethrex-storage-rollup.workspace = true
ethrex-l2.workspace = true
ethrex-l2-common.workspace = true
ethrex-sdk.workspace = true
ethrex-l2-rpc.workspace = true
tikv-jemallocator = { version = "0.6.0", optional = true, features = ["stats", "unprefixed_malloc_on_supported_platforms", "background_threads"] }
bytes.workspace = true
hex.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { workspace = true, features = ["string"] }
clap_complete.workspace = true
eyre.workspace = true
directories = "5.0.1"
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
anyhow = "1.0.86"
rand = "0.8.5"
local-ip-address = "0.6"
tokio-util.workspace = true
lazy_static.workspace = true
secp256k1.workspace = true
keccak-hash.workspace = true
reqwest.workspace = true
thiserror.workspace = true
itertools = "0.14.0"
tui-logger.workspace = true

cfg-if = "1.0.0"

ethrex-dev = { path = "../../crates/blockchain/dev", optional = true }
ethrex-metrics = { path = "../../crates/blockchain/metrics" }
url.workspace = true
ethrex-prover = { workspace = true, features = ["l2"] }

[[bin]]
name = "ethrex"
path = "./ethrex.rs"

[lib]
name = "ethrex"
path = "./lib.rs"

[features]
debug = ["ethrex-vm/debug"]
default = ["rocksdb", "c-kzg", "rollup_storage_sql", "dev", "metrics"]
dev = ["dep:ethrex-dev"]
c-kzg = [
  "ethrex-vm/c-kzg",
  "ethrex-common/c-kzg",
  "ethrex-blockchain/c-kzg",
  "ethrex-p2p/c-kzg",
]
metrics = ["ethrex-blockchain/metrics", "ethrex-l2/metrics"]
libmdbx = ["ethrex-storage/libmdbx"]
rocksdb = ["ethrex-storage/rocksdb"]
jemalloc = ["dep:tikv-jemallocator"]
jemalloc_profiling = [
  "jemalloc",
  "tikv-jemallocator/profiling",
  # forward to the RPC crate so its handlers and dependency are enabled
  "ethrex-rpc/jemalloc_profiling",
]
rollup_storage_sql = ["ethrex-storage-rollup/sql"]
sync-test = ["ethrex-p2p/sync-test"]
sp1 = ["ethrex-prover/sp1"]
gpu = ["ethrex-prover/gpu"]
risc0 = ["ethrex-prover/risc0"]
revm = ["ethrex-vm/revm"]

[dev-dependencies]
criterion = { version = "0.5.1", features = [
  "html_reports",
  "async_futures",
  "async_tokio",
] }
ethrex-sdk.workspace = true
secp256k1.workspace = true
tempfile.workspace = true

[[bench]]
path = "./bench/import_blocks_benchmark.rs"
name = "import_blocks_benchmark"
harness = false

[[bench]]
path = "./bench/build_block_benchmark.rs"
name = "build_block_benchmark"
harness = false

[build-dependencies]
vergen-git2 = { version = "1.0.7", features = ["rustc"] }
ethrex-sdk.workspace = true
hex.workspace = true
bytes.workspace = true
ethrex-common.workspace = true
serde_json.workspace = true
genesis-tool = { path = "../../tooling/genesis" }
thiserror.workspace = true
