[package]
name = "ethrex-replay"
version = "0.1.0"
edition = "2024"

[profile.dev]
debug = 2

[profile.release]
debug = 2

[dependencies]
ethrex-config.workspace = true
ethrex-common.workspace = true
ethrex-vm.workspace = true
ethrex-levm.workspace = true
ethrex-rpc.workspace = true

zkvm_interface = { path = "../../crates/l2/prover/zkvm/interface", default-features = false }
ethrex-prover = { path = "../../crates/l2/prover", default-features = false }

serde.workspace = true
hex.workspace = true
serde_json.workspace = true
serde_with.workspace = true
reqwest.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
eyre.workspace = true
tokio = { workspace = true, features = ["full"] }
clap.workspace = true
charming = { version = "0.4.0", features = ["ssr"] }
futures.workspace = true
rkyv.workspace = true

jemallocator = { version = "0.5.4", optional = true }

[features]
risc0 = ["zkvm_interface/risc0", "ethrex-prover/risc0"]
sp1 = ["zkvm_interface/sp1", "ethrex-prover/sp1"]
gpu = ["ethrex-prover/gpu"]
l2 = ["zkvm_interface/l2", "ethrex-prover/l2"]
profiling = ["ethrex-prover/profiling"]
ci = []
jemalloc = ["dep:jemallocator"]
