[package]
name = "load_test"
version.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
hex.workspace = true
secp256k1.workspace = true
ethereum-types.workspace = true
ethrex-rpc.workspace = true
ethrex-sdk.workspace = true
ethrex-blockchain.workspace = true
ethrex-common.workspace = true
futures = "0.3"

eyre.workspace = true
keccak-hash.workspace = true
tokio.workspace = true
