[package]
name = "ethrex-blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethrex-levm = { path = "../vm/levm", default-features = false }
thiserror.workspace = true
sha3.workspace = true
tracing.workspace = true
bytes.workspace = true
cfg-if = "1.0.0"

ethrex-rlp.workspace = true
ethrex-common = { path = "../common", default-features = false }
ethrex-storage = { path = "../storage/store", default-features = false }
ethrex-vm = { path = "../vm", default-features = false }

k256 = { version = "0.13.3", features = ["ecdh"] }

ethrex-metrics = { path = "./metrics", default-features = false }

[dev-dependencies]
serde_json.workspace = true
hex = "0.4.3"

[lib]
path = "./blockchain.rs"

[features]
default = ["c-kzg"]
libmdbx = ["ethrex-common/libmdbx", "ethrex-storage/default", "ethrex-vm/libmdbx"]
c-kzg = ["ethrex-common/c-kzg", "ethrex-levm/c-kzg"]
metrics = ["ethrex-metrics/transactions"]
