[package]
name = "ethrex-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethrex-rlp.workspace = true
ethrex-trie.workspace = true

tracing.workspace = true
tinyvec = "1.6.0"
ethereum-types.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sha2.workspace = true
# TODO(#1102): Move to Lambdaworks in the future
c-kzg = { version = "^1.0.3", optional = true }
kzg-rs.workspace = true
sha3.workspace = true
secp256k1.workspace = true
once_cell = "1.20.2"
crc32fast.workspace = true
bytes.workspace = true
hex.workspace = true
lazy_static.workspace = true
rayon.workspace = true
url.workspace = true
rkyv.workspace = true

[dev-dependencies]
hex-literal.workspace = true

[features]
default = []
c-kzg = ["dep:c-kzg"]

[lib]
path = "./common.rs"

[lints.clippy]
unwrap_used = "deny"
