[package]
name = "ethrex-l2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
ethereum-types.workspace = true
ethrex-common.workspace = true
ethrex-rlp.workspace = true
ethrex-rpc.workspace = true
ethrex-blockchain = { workspace = true, features = ["l2"] }
ethrex-storage.workspace = true
ethrex-vm = { workspace = true, features = ["l2"] }
ethrex-dev = { path = "../../crates/blockchain/dev", default-features = false }
ethrex-metrics = { path = "../blockchain/metrics", default-features = false }
ethrex-sdk = { path = "./sdk" }
hex.workspace = true
bytes.workspace = true
jsonwebtoken.workspace = true
secp256k1.workspace = true
keccak-hash.workspace = true
envy = "0.4.2"
thiserror.workspace = true
directories = "5.0.1"
toml = { version = "0.8.19", features = ["parse"] }
bincode = "1.3.3"

zkvm_interface = { path = "./prover/zkvm/interface/", features = ["l2"] }

[dev-dependencies]
rand = "0.8.5"

[lib]
path = "./l2.rs"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
as_conversions = "deny"
unnecessary_cast = "warn"
panic = "deny"

[features]
default = []
metrics = ["ethrex-metrics/l2"]
