[package]
name = "ethrex-l2"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
ethereum-types.workspace = true
ethrex-common.workspace = true
ethrex-rlp.workspace = true
ethrex-rpc.workspace = true
ethrex-blockchain.workspace = true
ethrex-storage.workspace = true
ethrex-storage-rollup.workspace = true
ethrex-trie.workspace = true
ethrex-vm.workspace = true
ethrex-levm.workspace = true
ethrex-l2-common.workspace = true
ethrex-dev = { path = "../../crates/blockchain/dev", default-features = false }
ethrex-metrics = { path = "../blockchain/metrics", default-features = false }
ethrex-sdk = { path = "./sdk" }
hex.workspace = true
bytes.workspace = true
jsonwebtoken.workspace = true
secp256k1.workspace = true
keccak-hash.workspace = true
envy = "0.4.2"
rand.workspace = true
thiserror.workspace = true
directories = "5.0.1"
bincode = "1.3.3"
serde_with = "3.11.0"
# Changing the tag for spawned will break the TDX image build
# When updating it try to build the TDX image and update service.nix with the new hash
spawned-concurrency = { git = "https://github.com/lambdaclass/spawned.git", tag = "v0.1.0-alpha" }
spawned-rt = { git = "https://github.com/lambdaclass/spawned.git", tag = "v0.1.0-alpha" }
lazy_static.workspace = true
aligned-sdk = { git = "https://github.com/yetanotherco/aligned_layer", tag="v0.16.1" }
ethers = "2.0"
cfg-if.workspace = true

zkvm_interface = { path = "./prover/zkvm/interface/" }

[dev-dependencies]
rand = "0.8.5"

[lib]
path = "./l2.rs"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
as_conversions = "deny"
unnecessary_cast = "warn"
panic = "deny"

[features]
default = ["l2"]
metrics = ["ethrex-blockchain/metrics", "ethrex-metrics/l2"]
l2 = ["ethrex-blockchain/l2", "ethrex-vm/l2", "zkvm_interface/l2"]
