[package]
name = "ethrex-l2"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
ethereum-types.workspace = true
ethrex-common.workspace = true
ethrex-config.workspace = true
ethrex-rlp.workspace = true
ethrex-rpc.workspace = true
ethrex-blockchain.workspace = true
ethrex-storage.workspace = true
ethrex-storage-rollup.workspace = true
ethrex-trie.workspace = true
ethrex-vm.workspace = true
ethrex-levm.workspace = true
ethrex-l2-common.workspace = true
ethrex-l2-rpc.workspace = true
ethrex-dev = { path = "../../crates/blockchain/dev", default-features = false }
ethrex-metrics = { path = "../blockchain/metrics", default-features = false }
ethrex-sdk = { path = "./sdk" }
ethrex-p2p.workspace = true
hex.workspace = true
bytes.workspace = true
jsonwebtoken.workspace = true
secp256k1.workspace = true
envy = "0.4.2"
rand.workspace = true
thiserror.workspace = true
spawned-rt.workspace = true
spawned-concurrency.workspace = true
futures.workspace = true
directories = "5.0.1"
bincode = "1.3.3"
serde_with.workspace = true
lazy_static.workspace = true
aligned-sdk = { git = "https://github.com/yetanotherco/aligned_layer", tag = "v0.16.1" }
ethers = "2.0"
cfg-if.workspace = true
chrono = "0.4.41"
clap.workspace = true
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = "0.29.0"
tui-big-text = "0.7.1"
tui-scrollview = "0.5.1"
tui-logger.workspace = true
tabwriter = "1.4.1"
color-eyre = "0.6.5"
axum.workspace = true

guest_program = { path = "./prover/src/guest_program/" }


[build-dependencies]
vergen-git2 = { version = "1.0.7" }

[dev-dependencies]
anyhow = "1.0.86"

[lib]
path = "./l2.rs"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
as_conversions = "deny"
unnecessary_cast = "warn"
panic = "deny"

[features]
default = ["l2"]
metrics = ["ethrex-blockchain/metrics"]
l2 = ["guest_program/l2"]
