[package]
name = "ethrex-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethrex-rlp.workspace = true
ethrex-common.workspace = true
ethrex-trie.workspace = true

ethereum-types.workspace = true
anyhow = "1.0.86"
bytes.workspace = true
tracing.workspace = true
thiserror.workspace = true
sha3.workspace = true
hex.workspace = true
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
libmdbx = { workspace = true, optional = true }
redb = { workspace = true, optional = true }

[features]
default = []
libmdbx = ["dep:libmdbx", "ethrex-trie/libmdbx"]
redb = ["dep:redb"]

[dev-dependencies]
hex.workspace = true
hex-literal.workspace = true
tempdir = "0.3.7"

[lib]
path = "./lib.rs"
