[package]
name = "ethrex-storage"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethrex-rlp.workspace = true
ethrex-common.workspace = true
ethrex-trie.workspace = true

async-trait.workspace = true
ethereum-types.workspace = true
anyhow = "1.0.86"
bytes.workspace = true
tracing.workspace = true
thiserror.workspace = true
sha3.workspace = true
hex.workspace = true
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
libmdbx = { workspace = true, optional = true }
redb = { workspace = true, optional = true }
# NOTE: intentionally avoiding the workspace dep as it brings "full" features, breaking the provers
# We only need the runtime for the blocking databases to spawn blocking tasks
tokio = { version = "1.41.1", optional = true, default-features = false, features = ["rt"] }
bincode = "1.3.3"

[features]
default = []
libmdbx = ["dep:libmdbx", "ethrex-trie/libmdbx", "dep:tokio"]
redb = ["dep:redb", "dep:tokio"]

[dev-dependencies]
hex.workspace = true
hex-literal.workspace = true
tempdir = "0.3.7"
tokio = { workspace = true, features = ["full"] }

[lib]
path = "./lib.rs"

[lints.clippy]
unwrap_used = "deny"
