[package]
name = "ethrex-vm"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true

[dependencies]
ethrex-common.workspace = true
ethrex-crypto.workspace = true
ethrex-levm = { path = "./levm", default-features = false }
ethrex-trie.workspace = true
ethrex-rlp.workspace = true

derive_more = { version = "1.0.0", features = ["full"] }
bytes.workspace = true
thiserror.workspace = true
lazy_static.workspace = true
tracing.workspace = true
serde.workspace = true
rkyv.workspace = true

bincode = "1"
dyn-clone = "1.0"

ethereum-types.workspace = true

[lib]
path = "./lib.rs"

[features]
default = []

c-kzg = ["ethrex-levm/c-kzg", "ethrex-common/c-kzg"]

sp1 = ["ethrex-levm/sp1"]
risc0 = ["ethrex-levm/risc0", "c-kzg"]

debug = ["ethrex-levm/debug"]

[lints.clippy]
unwrap_used = "deny"
redundant_clone = "warn"
