[package]
name = "genesis-tool"
edition.workspace = true
version.workspace = true

[dependencies]
ethrex-common.workspace = true
serde_json = { workspace = true, features = [ "preserve_order" ] }

[lib]
name = "genesis_tool"
path = "./src/lib.rs"

[[bin]]
name = "genesis-sorter"
path = "./src/genesis.rs"