[package]
name = "genesis-tool"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true

[dependencies]
ethrex-common.workspace = true
serde_json = { workspace = true, features = [ "preserve_order" ] }

[lib]
name = "genesis_tool"
path = "./src/lib.rs"

[[bin]]
name = "genesis-sorter"
path = "./src/genesis.rs"
