[package]
name = "load_test"
edition.workspace = true
version.workspace = true

[dependencies]
clap.workspace = true
hex.workspace = true
secp256k1.workspace = true
ethereum-types.workspace = true
ethrex-rpc.workspace = true
ethrex-sdk.workspace = true
ethrex-blockchain.workspace = true
ethrex-common.workspace = true
ethrex-l2-common.workspace = true
eyre.workspace = true
keccak-hash.workspace = true
tokio = { workspace = true, features = ["full"] }
futures = "0.3"
